--- a/index.html
+++ b/index.html
@@ -352,6 +352,24 @@
                 <p>Developed an automated hotspot system that bills and disconnects users based on data/time. Supports real-time payments using M-Pesa STK Push; deployed in a live transport hub.</p>
                 <p><a href="https://www.airrumi.online" target="_blank" style="color:var(--accent);">🔗 www.airrumi.online</a></p>
               </div>
+              <div class="project-card">
+                <h3>NachuPay - Water Utility Management System</h3>
+                <p>Full water utility management system for a church-owned community water provider</p>
+                <p>Built a comprehensive water utility management system with secure OTP authentication and complete water utility management capabilities for community water providers.</p>
+                <p><a href="https://wellforlife.pythonanywhere.com/" target="_blank" style="color:var(--accent);">🔗 wellforlife.pythonanywhere.com</a></p>
+              </div>
+              <div class="project-card">
+                <h3>SomaPro - School Management System</h3>
+                <p>A comprehensive school management system</p>
+                <p>Developed a full-featured school management system designed to streamline educational institution operations, including student management, academic tracking, and administrative functions.</p>
+                <p><a href="https://somapro.co.ke" target="_blank" style="color:var(--accent);">🔗 somapro.co.ke</a></p>
+              </div>
+              <div class="project-card">
+                <h3>Eartship - Hospitality Website</h3>
+                <p>Modern hospitality website for a holiday and accommodation business</p>
+                <p>Created a contemporary hospitality website featuring modern design and user-friendly booking experience for a holiday and accommodation business.</p>
+                <p><a href="https://eartship.co.ke" target="_blank" style="color:var(--accent);">🔗 eartship.co.ke</a></p>
+              </div>
             </div>
           </div>
         </div>
@@ -411,4 +429,4 @@
     });
   </script>
 </body>
-</html> 
+</html>
