--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               <p><i class="fa-regular fa-envelope"></i> mukabim.mm@gmail.com</p>
               <p><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/michaelmukabi/" target="_blank">linkedin.com/in/michaelmukabi</a></p>
               <p><i class="fa-solid fa-globe"></i> <a href="https://tenthlining.com" target="_blank">tenthlining.com</a></p>
-              <p><i class="fa-solid fa-wifi"></i> <a href="https://www.airrumi.online" target="_blank">www.airrumi.online</a></p>
+              <p><i class="fa-solid fa-wifi"></i> <a href="https://www.somapro.co.ke" target="_blank">www.somapro.co.ke</a></p>
             </div>
             <form class="contact-form" action="https://formspree.io/f/xayzqjqr" method="POST">
               <input type="text" name="name" placeholder="Name" required>
